Rework embed to general key-value system.